# snowfox-hw-business-card

./: .gitmodules  README.md
firmware/: CMakeLists.txt  README.md  config.cmake
firmware/src/: main.cpp
freecad_source/: e-paper.step  snowfox-hw-business-card-complete.FCStd
kicad_source/: display.sch  fp-info-cache  history.sch  microcontroller.sch  nfc.sch  power.sch  snowfox-hw-business-card-cache.lib  snowfox-hw-business-card.kicad_pcb  snowfox-hw-business-card.net  snowfox-hw-business-card.pro  snowfox-hw-business-card.sch  usb.sch
production_data/: display_frame.step  display_frame.stl
